--- a/ARKicktoupload 6_04/css/style.css
+++ b/ARKicktoupload 6_04/css/style.css
@@ -24,7 +24,7 @@ font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100%;
     visibility: visible;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.3);
 }
 #catscreen{
     position: absolute;
@@ -33,7 +33,7 @@ font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100%;
     visibility: hidden;
-    background-color: rgba(0,0,0,1);
+    background-color: rgba(0,0,0,0.3);
 }
 #subcatscreen{
     position: absolute;
@@ -42,7 +42,7 @@ font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100%;
     visibility: hidden;
-    background-color: rgba(0,0,0,1);
+    background-color: rgba(0,0,0,0.3);
 }
 #subsubcatscreen{
     position: absolute;
@@ -51,7 +51,7 @@ font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100%;
     visibility: hidden;
-    background-color: rgba(0,0,100,0.5);
+    background-color: rgba(0,0,0,0.3);
 }
 #browsermode{
     position: absolute;
@@ -60,7 +60,7 @@ font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100%;
     visibility: hidden;
-    background-color: rgba(100,100,0,0.5);
+    background-color: rgba(0,0,0,0.3);
 }
 #infoscreen{
     position: absolute;
@@ -69,7 +69,7 @@ font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100%;
     visibility: hidden;
-    background-color: rgba(100,0,100,0.5);
+    background-color: rgba(0,0,0,0.3);
 }
 #sidekickmode{
     position: absolute;
@@ -78,7 +78,7 @@ font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
     width: 100%;
     height:100%;
     visibility: hidden;
-    background-color: rgba(0,100,100,0.5);
+    background-color: rgba(0,0,0,0.3);
 }
 #settings{
     position: absolute;
@@ -243,3 +243,95 @@ ul
 .imgcontainer1 img { width: 100%; }
 .imgcontainer2 img { width: 100%; }
 .imgcontainer3 img { width: 100%; }
+#infoadd{
+    position: absolute;
+    top:19%;
+    width:90%;
+    left:5%;
+    height:25%;
+    border: 2px solid rgba(0,250,250,0.8);
+    border-radius: 10px;
+    background-color: rgba(0,250,250,0.3);
+
+}
+#rating{
+    position: absolute;
+    bottom:10%;
+    width:25%;
+    right:5%;
+    height:50%;
+    border: 2px solid rgba(0,250,0,0.8);
+    border-radius: 10px;
+    background-color: rgba(0,250,0,0.3);
+
+}
+#tips{
+    position: absolute;
+    top:47%;
+    width:90%;
+    left:5%;
+    height:30%;
+    border: 2px solid rgba(0,250,250,0.8);
+    border-radius: 10px;
+    background-color: rgba(0,250,250,0.3);
+
+}
+#name{
+    font-size: 1.2em;
+    font-weight: bold;
+    color:white;
+    position: absolute;
+    left:3%;
+    top:2%;
+}
+#address{
+    font-size: 0.9em;
+    font-weight: bold;
+    color:white;
+    position: absolute;
+    left:3%;
+    top:22%;
+}
+#citystate{
+    font-size: 0.9em;
+    font-weight: bold;
+    color:white;
+    position: absolute;
+    left:3%;
+    top:38%;
+}
+#country{
+    font-size: 0.9em;
+    font-weight: bold;
+    color:white;
+    position: absolute;
+    left:3%;
+    top:55%;
+}
+#phonenum{
+    font-size: 1.2em;
+    font-weight: bold;
+    color:yellow;
+    position: absolute;
+    left:3%;
+    top:75%;
+}
+#ratingvalue{
+    font-size: 2.0em;
+    font-weight: bold;
+    color:green;
+    position: absolute;
+    left:12%;
+    top:22%;
+}
+#mapdisplay{
+    position:absolute;
+    top:80%;
+    width:90%;
+    left:5%;
+    height:18%;
+    border: 2px solid rgba(0,250,250,0.8);
+    border-radius: 10px;
+    background-color: rgba(0,250,250,0.3); 
+    overflow: hidden;  
+}
